<resources>
    <string name="app_name">Testapp</string>
    <string name="bienvenue_chez_tchop_mo">Bienvenue chez TCHOP\'MO</string>
    <string name="v_g_tarienne">Végétarienne</string>
    <string name="tchop_mo">TCHOP\'MO</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="_4_fromages">4 Fromages</string>
    <string name="margherita">Margherita</string>
    <string name="nos_meilleures_pizzas">Nos Meilleures Pizzas</string>
    <string name="clients_satisfaits">5000+ Clients satisfaits</string>
    <string name="statistiques">statistiques</string>
    <string name="localisation">localisation</string>
    <string name="jean_dupont"> Jean Dupont</string>
    <string name="superbe_pizza_un_r_gal">Superbe pizza! Un régal! Et le service est très rapide.</string>
    <string name="avis_clients">avis clients</string>
    <string name="adress">Rue bordo Avenue du 50eme. 123 Roubio</string>
    <string name="pizza_airfryer">Pizza Airfryer</string>
    <string name="mon_panier">Mon Panier</string>
    <string name="commander_tout_le_panier">Commander tout le panier</string>
    <string name="total_12_99">Total : 12.99 €</string>
    <string name="nom_de_la_pizza">Nom de la Pizza</string>
    <string name="command_le_30_01_2025">Commandé le: 30/01/2025</string>
    <string name="livraison_pr_vue_19_30">Livraison prévue: 19:30</string>
    <string name="en_pr_paration">En préparation</string>
    <string name="commandes_en_cours">Commandes en cours</string>
    <string name="_12_50">12,50 €</string>
    <string name="pizza_aux_peperonie">Pizza Aux peperonie</string>
    <string name="historique_des_commandes">Historique des commandes</string>
    <string name="pizza_quatre_fromages">Pizza Quatre Fromages</string>
    <string name="command_le_29_01_2025">Commandé le: 29/01/2025</string>
    <string name="livr_20_15">Livré à: 20:15</string>
    <string name="livr">Livré</string>
    <string name="_20_50">20,50 €</string>
    <string name="command_le_31_01_1015">commandé le 31-01-1015</string>
    <string name="livr_a_19_50">livré a 19:50</string>
</resources>