<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- En-tête -->
    <TextView
        android:id="@+id/titleCommandes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mes Commandes"
        android:textColor="@color/orange"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ScrollView pour faire défiler tout le contenu -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleCommandes"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Section Commandes en cours -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commandes_en_cours"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <!-- Layout pour une commande en cours -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pizza1"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:id="@+id/pizzaNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pizza Margherita"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/orderDateTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/command_le_30_01_2025"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:id="@+id/deliveryTimeTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livraison_pr_vue_19_30"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:id="@+id/orderStatusTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/en_pr_paration"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/pizzaPriceTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_12_50"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pizza3"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:id="@+id/pizzaName2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_aux_peperonie"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/orderDate2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/command_le_30_01_2025"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:id="@+id/deliveryTime2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livraison_pr_vue_19_30"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:id="@+id/orderStatus2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/en_pr_paration"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/pizzaPrice2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20_50"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Ligne de séparation -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"/>

            <!-- Section Historique -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historique_des_commandes"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"/>

            <!-- Layout pour une commande de l'historique -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/pizza2"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pizza_quatre_fromages"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/command_le_29_01_2025"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livr_20_15"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livr"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20_50"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="12dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/fbpizza"
                        android:scaleType="centerCrop"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="pizza au feu de bois"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/command_le_31_01_1015"
                            android:textColor="@color/black"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livr_a_19_50"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/livr"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_20_50"
                            android:textColor="@color/orange"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/orange"
        app:itemTextColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>